# Diplom_Python

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
core/: admin.py  models.py
src/core/: models.py
src/core/migrations/: 0001_initial.py
src/todolist/: settings.py
