[tool.poetry]
name = "diplom_python"
version = "0.1.0"
description = ""
authors = ["avkucher <99530288+avkucher@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
